--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "@ionic/angular-toolkit": "12.1.1",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.3.1",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
