--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.1.2",
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^7.0.0",
@@ -46,6 +47,7 @@
     "@angular/cli": "^18.2.8",
     "@angular/compiler-cli": "^18.2.7",
     "@angular/language-service": "^18.2.7",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "12.1.1",
     "@types/jasmine": "~4.3.0",
