--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
     "@angular/service-worker": "^18.2.7",
-    "@capacitor/app": "^6.0.0",
+    "@capacitor/app": "^6.0.1",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.1",
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/keyboard": "^6.0.0",
@@ -33,6 +34,7 @@
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
+    "local-iso-timestamp": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -51,7 +53,7 @@
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "12.1.1",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^8.57.0",
