--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
     "ts-node": "^8.3.0",
     "typescript": "~5.4.5"
   },
+  "engines": {
+    "node": "22.9.0"
+  },
   "description": "EndoStudio is an app for viewing and recording video input from endoscopes and boroscopes."
 }
