--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^18.2.7",
     "@angular/service-worker": "^18.2.7",
     "@capacitor/app": "^6.0.1",
+    "@capacitor/browser": "^6.0.4",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.1",
